# Portfolio

./: .gitignore  Makefile  README.md  config.py  profiles.toml  pyproject.toml
data/: sentence_w_sentiment.py
data/dev/documents/: doc00.json  doc01.json  doc02.json  doc03.json  doc04.json  doc05.json
hooks/: __init__.py  guard.py  langfuse.py  log.py  mongo.py  payload.py  persist.py
langops/hooks/: guard.py  langfuse.py  log.py  mongo.py  payload.py  persist.py  utils.py
langops/llm/: adapters.py  client.py  db.py  profiles.py
langops/orchestration/dagster/: __init__.py  config.json  config_loader.py  graphs.py  jobs.py  ops.py  schedules.py  sensors.py
langops/persistence/: session.py
langops/persistence/models/: base.py  document.py  sentence.py
langops/persistence/repository/: base_repo.py  document_repo.py  sentence_repo.py  sentence_sentiment_repo.py
langops/persistence/scripts/: create_tables.py
langops/tasks/: add_document.py  analyse_sentiment_sentence.py  base.py
llm/: adapters.py  client.py  db.py  profiles.py  runner.py  schemas.py
llm/hooks/: guard.py  langfuse.py  mongo.py
orchestration/dagster/: __init__.py  config.json  config_loader.py  graphs.py  jobs.py  ops.py  schedules.py  sensors.py
persistence/: exceptions.py  session.py
persistence/models/: __init__.py  base.py  document.py  relationships.py  sentence.py
persistence/repository/: __init__.py  base_repo.py  document_repo.py  sentence_repo.py  sentence_sentiment_repo.py  sentiment_analysis_repo.py
persistence/scripts/: add_document.py  create_tables.py
tasks/: add_document.py  analyse_sentiment_sentence.py  base.py  doc_sentence_splitter.py  sentiment.py  sentiment_analysis.py  split_sentences.py
tasks/prompts/: prompt_sentiment.py
tests/: conftest.py
tests/test_persistence/: test_add_document.py
utils/: get_unprocessed_documents.py  split_sentences.py
