[tool.poetry]
name = "DT-LLM-SDM"
version = "0.1.0"
description = "A Modern LLM-Operations-Oriented Framework for Software Development Management"
authors = ["Bilgehan Emiral <bilgehan.emiral@gmail.com>"]
packages = [
    { include = "ingestion" },
    { include = "data" },
    { include = "llm" },
    { include = "tasks" },
    { include = "analytics" },
    { include = "utils" }
]

[tool.poetry.dependencies]
python = "3.12.11"
requests = "^2.31.0"
pandas = "^2.2.0"
matplotlib = "^3.8.0"
anyio = "^4.0.0"
tenacity = "^9.0.0"
langfuse = ">=2.0,<3.0"
anthropic = "^0.64.0"
typer = ">=0.9,<0.16"   # downgraded to avoid guardrail
rich = ">=13.6,<14"     # downgraded to avoid guardrail
loguru = "^0.7.3"
dotenv = "^0.9.9"
pydantic-settings = "^2.10.1"
pymongo = "^4.14.1"
guardrails-ai = {version = "0.6.6", extras = ["pydantic"]}
dspy = "^3.0.3"
sqlmodel = "^0.0.24"
aiosqlite = "^0.21.0"
greenlet = "^3.2.4"
click = "8.1.7" # downgraded for dagster compatibility  
dagster = "^1.11.13"
dagster-webserver = "^1.11.13"
motor = "^3.7.1" # for async mongo db ops

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.5.0"
mypy = "^1.8"
pytest-asyncio = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Run Ruff on these paths
src = ["./llm", "./config.py"]

# Opt-in to rules
select = [
    "E",   # pycodestyle (PEP8)
    "F",   # pyflakes
    "I",   # isort-like import sorting
    "UP",  # pyupgrade (modern Python idioms)
]

# Respect Black's formatting style
line-length = 88
indent-width = 4

[tool.ruff.format]
# Make Ruff format code like Black
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"